--- a/style.css
+++ b/style.css
@@ -44,13 +44,13 @@ body {
 .social-icons {
   display: flex;
   align-items: center;
-  gap: 0px;
+  gap: -4px; /* força aproximação */
 }
 
 .social-icons a {
   display: inline-flex;
   padding: 0;
-  margin: 0;
+  margin: 0 -6px; /* remove espaço invisível lateral */
   line-height: 0;
 }
 
@@ -128,6 +128,7 @@ footer a {
 @media (max-width: 768px) {
 
   header {
+    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 15px 20px;
@@ -139,21 +140,28 @@ footer a {
   }
 
   .social-icons {
-    position: absolute;
-    top: 18px;
-    right: 20px;
+    position: static;
+    margin-bottom: 10px;
+    gap: 0px;
+  }
+
+  .social-icons a {
+    margin: 0 -5px;
+  }
+
+  .social-icons img {
+    width: 42px;
   }
 
   nav {
     width: 100%;
-    margin-top: 10px;
   }
 
   nav ul {
     display: flex;
     justify-content: center;
-    gap: 18px;
-    flex-wrap: nowrap;
+    gap: 14px;
+    flex-wrap: wrap; /* permite quebrar linha */
   }
 
   nav ul li a {
